--- a/07-DevSteam/src/App.css
+++ b/07-DevSteam/src/App.css
@@ -2,15 +2,40 @@
 
 body{
     font-family: "Inter", sans-serif;
-    background-color: #132101;
+    background-color: #132101 !important;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #4A701C;
+    color: #fff;
 }
-.buscar{
-    background-color: #4A701C;
-}
-.buscar, .buscar::placeholder{
+
+
+.buscar, 
+.buscar::placeholder{
+    background-color: #131313 ;
     color: #d7d7d7;
 }
+
+.promoCard{
+    width:280px;
+    transition: transform 0.2s;
+background: linear-gradient(to bottom, #19587b, #2b87ae);
+
+}
+
+.promoCard:hover{
+    transform: scale(1.03);
+}
+
+.desconto {
+    background-color: #4c6b22;
+    color: #beeb14;
+  }
+
+  .corValor {
+    color: #beeb14;
+  }
+
+  #addCarrinho:houver{
+    background-color: #547625;
+  }
